He actualizado gradle y he completado y terminado el proyecto, arreglando errores en Consola